--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AllowedHosts": "*",
+  "FMPKey" : "YjRWVCBVpSmYOsy6vLWce4sJq5i5eNke",
   "JWT": {
     "Issuer": "http://localhost:5246",
     "Audience": "http://localhost:5246",
