--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
+    "toastify": "^2.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
