frontend: add Comments

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_KEY=YjRWVCBVpSmYOsy6vLWce4sJq5i5eNke
+#REACT_APP_API_KEY=YjRWVCBVpSmYOsy6vLWce4sJq5i5eNke
+REACT_APP_API_KEY=0SDGbk32q4XL8KCk2yVoaamfcR1yzCGP
