--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnectionSqlServer": "Data Source=.\\SQLEXPRESS;Initial Catalog=finshark;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "DefaultConnectionPostgree": "Server=localhost;Port=5432;Database=finshark;User Id=postgres;Password=1"
+    "DefaultConnectionPostgree": "Server=postgres_db;Port=5432;Database=finshark;User Id=postgres;Password=1"
   },
   "Logging": {
     "LogLevel": {
